@@ -6,6 +6,7 @@ import com.sep490.backendclubmanagement.dto.response.AvailableMemberDTO;
 import com.sep490.backendclubmanagement.dto.response.TeamResponse;
 import com.sep490.backendclubmanagement.entity.*;
 import com.sep490.backendclubmanagement.exception.AccessDeniedException;
+import com.sep490.backendclubmanagement.exception.AppException;
 import com.sep490.backendclubmanagement.exception.DuplicateResourceException;
 import com.sep490.backendclubmanagement.exception.ResourceNotFoundException;
 import com.sep490.backendclubmanagement.mapper.TeamMapper;
@@ -18,464 +19,375 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
-import org.springframework.data.domain.Sort;
+import static org.mockito.Mockito.*;
 
 import java.time.LocalDate;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
 
 @ExtendWith(org.mockito.junit.jupiter.MockitoExtension.class)
 class TeamServiceImplTest {
 
-    @Mock
-    private TeamRepository teamRepository;
-    @Mock
-    private TeamMapper teamMapper;
-    @Mock
-    private ClubRepository clubRepository;
-    @Mock
-    private SemesterRepository semesterRepository;
-    @Mock
-    private ClubRoleRepository clubRoleRepository;
-    @Mock
-    private ClubMemberShipRepository clubMemberShipRepository;
-    @Mock
-    private RoleMemberShipRepository roleMemberShipRepository;
-    @Mock
-    private RoleGuard guard;
-    @Mock
-    private UserRepository userRepository;
-    @Mock
-    private NotificationService notificationService;
-    @Mock
-    private WebSocketService webSocketService;
+    @Mock private TeamRepository teamRepository;
+    @Mock private TeamMapper teamMapper;
+    @Mock private ClubRepository clubRepository;
+    @Mock private SemesterRepository semesterRepository;
+    @Mock private ClubRoleRepository clubRoleRepository;
+    @Mock private ClubMemberShipRepository clubMemberShipRepository;
+    @Mock private RoleMemberShipRepository roleMemberShipRepository;
+    @Mock private RoleGuard guard;
+    @Mock private UserRepository userRepository;
+    @Mock private NotificationService notificationService;
+    @Mock private WebSocketService webSocketService;
 
     @InjectMocks
     private TeamServiceImpl teamService;
 
     private Club club;
-    private Semester currentSemester;
+    private Semester semester;
     private Team team;
 
     @BeforeEach
-    void setup() {
+    void init() {
         club = new Club();
         club.setId(1L);
-        club.setClubName("CLB Dev Test");
+        club.setClubName("CLB Dev");
 
-        currentSemester = new Semester();
-        currentSemester.setId(10L);
-        currentSemester.setSemesterCode("2024A");
-        currentSemester.setIsCurrent(true);
-        currentSemester.setStartDate(LocalDate.of(2024, 1, 1));
-        currentSemester.setEndDate(LocalDate.of(2024, 6, 30));
+        semester = new Semester();
+        semester.setId(10L);
+        semester.setSemesterCode("2024A");
+        semester.setIsCurrent(true);
+        semester.setStartDate(LocalDate.now());
+        semester.setEndDate(LocalDate.now().plusMonths(3));
 
         team = new Team();
         team.setId(100L);
         team.setTeamName("Kỹ thuật");
-        team.setDescription("Ban kỹ thuật");
         team.setClub(club);
     }
 
-    // ========== getTeamsByClubId ==========
-
+    // ---------------------------------------
+    // GET TEAMS
+    // ---------------------------------------
     @Test
-    void getTeamsByClubId_returnsMappedDtos() {
-        // Arrange
-        when(teamRepository.findByClubId(club.getId()))
-                .thenReturn(List.of(team));
+    void getTeamsByClubId_success() {
+        when(teamRepository.findVisibleTeams(1L)).thenReturn(List.of(team));
 
         TeamResponse dto = new TeamResponse();
-        dto.setId(team.getId());
-        dto.setTeamName(team.getTeamName());
+        dto.setId(100L);
+        dto.setTeamName("Kỹ thuật");
         when(teamMapper.toDto(team)).thenReturn(dto);
 
-        // Act
-        List<TeamResponse> result = teamService.getTeamsByClubId(club.getId());
+        List<TeamResponse> result = teamService.getTeamsByClubId(1L);
 
-        // Assert
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(team.getTeamName(), result.get(0).getTeamName());
-        verify(teamRepository, times(1)).findByClubId(club.getId());
-        verify(teamMapper, times(1)).toDto(team);
+        verify(teamRepository).findVisibleTeams(1L);
     }
 
-    // ========== createTeam ==========
-
+    // ---------------------------------------
+    // CREATE TEAM
+    // ---------------------------------------
     @Test
-    void createTeam_happyPath_withLeaderViceAndMembers() {
-        Long leaderId = 101L;
-        Long viceId = 102L;
-        Long memberId = 103L;
-        Long actorId = 999L;
+    void createTeam_happyPath() {
 
         CreateTeamRequest req = new CreateTeamRequest();
-        req.setClubId(club.getId());
-        req.setTeamName("  Kỹ   thuật   ");
-        req.setDescription("Dev infra");
-        req.setLinkGroupChat("https://zalo.me/dev");
-        req.setLeaderUserId(leaderId);
-        req.setViceLeaderUserId(viceId);
-        req.setMemberUserIds(List.of(memberId));
+        req.setClubId(1L);
+        req.setTeamName("Kỹ thuật");
+        req.setLeaderUserId(10L);
+        req.setViceLeaderUserId(11L);
+        req.setMemberUserIds(List.of(12L));
 
-        // ==== required stubs ====
-        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(currentSemester));
-        when(clubRepository.findById(club.getId())).thenReturn(Optional.of(club));
+        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(semester));
+        when(clubRepository.findById(1L)).thenReturn(Optional.of(club));
 
-        when(guard.getCurrentUserId()).thenReturn(actorId);
-        when(guard.isClubPresident(actorId, club.getId())).thenReturn(true);
+        when(guard.getCurrentUserId()).thenReturn(999L);
+        when(guard.isClubPresident(999L, 1L)).thenReturn(true);
 
-        when(teamRepository.existsByClubIdAndTeamNameIgnoreCase(eq(club.getId()), anyString()))
+        when(teamRepository.existsByClubIdAndTeamNameIgnoreCase(eq(1L), anyString()))
                 .thenReturn(false);
 
-        // all members actually active in CLB
-        when(clubMemberShipRepository.findByUserIdInAndClubId(
-                anyList(),
-                eq(club.getId())
-        )).thenReturn(List.of(
-                buildMembership(leaderId),
-                buildMembership(viceId),
-                buildMembership(memberId)
-        ));
+        // memberships
+        ClubMemberShip m1 = buildMembership(10L);
+        ClubMemberShip m2 = buildMembership(11L);
+        ClubMemberShip m3 = buildMembership(12L);
 
-        // no duplicate roles in semester
-        when(roleMemberShipRepository.findExistingTeamMembersInSemester(
-                eq(club.getId()),
-                eq(currentSemester.getId()),
-                anyList()
-        )).thenReturn(Collections.emptyList());
+        when(clubMemberShipRepository.findByUserIdInAndClubId(anyList(), eq(1L)))
+                .thenReturn(List.of(m1, m2, m3));
+
+        // deactivate role
+        doNothing().when(roleMemberShipRepository)
+                .deactivateActiveRolesForUsers(anyList(), eq(1L), eq(semester.getId()));
+
+        // find roles
+        when(clubRoleRepository.findByClubIdAndRoleCode(eq(1L), eq("CLUB_TEAM_HEAD")))
+                .thenReturn(Optional.of(buildRole("CLUB_TEAM_HEAD")));
+        when(clubRoleRepository.findByClubIdAndRoleCode(eq(1L), eq("CLUB_TEAM_DEPUTY")))
+                .thenReturn(Optional.of(buildRole("CLUB_TEAM_DEPUTY")));
+        when(clubRoleRepository.findByClubIdAndRoleCode(eq(1L), eq("CLUB_MEMBER")))
+                .thenReturn(Optional.of(buildRole("CLUB_MEMBER")));
 
         // team saved
-        Team savedTeam = new Team();
-        savedTeam.setId(200L);
-        savedTeam.setTeamName("Kỹ thuật");
-        savedTeam.setDescription("Dev infra");
-        savedTeam.setClub(club);
-        when(teamRepository.save(any(Team.class))).thenReturn(savedTeam);
+        Team saved = new Team();
+        saved.setId(200L);
+        saved.setTeamName("Kỹ thuật");
+        saved.setClub(club);
+        when(teamRepository.save(any())).thenReturn(saved);
 
-        // roles
-        when(clubRoleRepository.findByClubIdAndRoleCode(club.getId(), "CLUB_TEAM_HEAD"))
-                .thenReturn(Optional.of(buildClubRole("CLUB_TEAM_HEAD")));
-        when(clubRoleRepository.findByClubIdAndRoleCode(club.getId(), "CLUB_TEAM_DEPUTY"))
-                .thenReturn(Optional.of(buildClubRole("CLUB_TEAM_DEPUTY")));
-        when(clubRoleRepository.findByClubIdAndRoleCode(club.getId(), "CLUB_MEMBER"))
-                .thenReturn(Optional.of(buildClubRole("CLUB_MEMBER")));
+        TeamResponse res = new TeamResponse();
+        res.setId(200L);
+        res.setTeamName("Kỹ thuật");
+        when(teamMapper.toDto(saved)).thenReturn(res);
 
-        TeamResponse respDto = new TeamResponse();
-        respDto.setId(200L);
-        respDto.setTeamName("Kỹ thuật");
-        when(teamMapper.toDto(savedTeam)).thenReturn(respDto);
+        TeamResponse out = teamService.createTeam(req);
 
-        // ==== Execute ====
-        TeamResponse result = teamService.createTeam(req);
-
-        assertEquals("Kỹ thuật", result.getTeamName());
-    }
-
-
-
-    @Test
-    void createTeam_throwsAccessDenied_whenNotPresidentOrVice() {
-        // Arrange
-        CreateTeamRequest req = new CreateTeamRequest();
-        req.setClubId(club.getId());
-        req.setTeamName("Ban Truyền thông");
-        req.setDescription("Truyền thông");
-
-        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(currentSemester));
-        when(clubRepository.findById(club.getId())).thenReturn(Optional.of(club));
-
-        when(guard.getCurrentUserId()).thenReturn(123L);
-        when(guard.isClubPresident(anyLong(), eq(club.getId()))).thenReturn(false);
-        when(guard.isClubVice(anyLong(), eq(club.getId()))).thenReturn(false);
-
-        // Act & Assert
-        assertThrows(AccessDeniedException.class,
-                () -> teamService.createTeam(req));
+        assertEquals("Kỹ thuật", out.getTeamName());
+        verify(webSocketService).broadcastToClub(eq(1L), eq("TEAM"), eq("CREATED"), anyMap());
     }
 
     @Test
-    void createTeam_throwsDuplicate_whenTeamNameExists() {
-        // Arrange
+    void createTeam_rejects_duplicateLeaderVice() {
         CreateTeamRequest req = new CreateTeamRequest();
-        req.setClubId(club.getId());
-        req.setTeamName("Ban Media");
+        req.setClubId(1L);
+        req.setTeamName("KT");
+        req.setLeaderUserId(10L);
+        req.setViceLeaderUserId(10L);
 
-        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(currentSemester));
-        when(clubRepository.findById(club.getId())).thenReturn(Optional.of(club));
-        when(guard.getCurrentUserId()).thenReturn(1L);
-        when(guard.isClubPresident(1L, club.getId())).thenReturn(true);
-
-        when(teamRepository.existsByClubIdAndTeamNameIgnoreCase(eq(club.getId()), anyString()))
-                .thenReturn(true);
-
-        // Act & Assert
         assertThrows(DuplicateResourceException.class,
                 () -> teamService.createTeam(req));
     }
 
     @Test
-    void createTeam_throwsIllegalArgument_whenNameTooShort() {
+    void createTeam_rejects_noPermission() {
         CreateTeamRequest req = new CreateTeamRequest();
-        req.setClubId(club.getId());
-        req.setTeamName("ab");  // too short --> validate fail ngay lập tức
+        req.setClubId(1L);
+        req.setTeamName("ABC");
 
-        // Không stub gì thêm — service fail trước khi gọi repository
+        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(semester));
+        when(clubRepository.findById(1L)).thenReturn(Optional.of(club));
+
+        when(guard.getCurrentUserId()).thenReturn(2L);
+        when(guard.isClubPresident(2L, 1L)).thenReturn(false);
+        when(guard.isClubVice(2L, 1L)).thenReturn(false);
+
+        assertThrows(AccessDeniedException.class,
+                () -> teamService.createTeam(req));
+    }
+
+    @Test
+    void createTeam_rejects_duplicateName() {
+        CreateTeamRequest req = new CreateTeamRequest();
+        req.setClubId(1L);
+        req.setTeamName("Media");
+
+        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(semester));
+        when(clubRepository.findById(1L)).thenReturn(Optional.of(club));
+
+        when(guard.getCurrentUserId()).thenReturn(1L);
+        when(guard.isClubPresident(1L, 1L)).thenReturn(true);
+
+        when(teamRepository.existsByClubIdAndTeamNameIgnoreCase(eq(1L), anyString()))
+                .thenReturn(true);
+
+        assertThrows(AppException.class,
+                () -> teamService.createTeam(req));
+    }
+
+    @Test
+    void createTeam_rejects_invalidName() {
+        CreateTeamRequest req = new CreateTeamRequest();
+        req.setTeamName("ab"); // too short
+        req.setClubId(1L);
+
         assertThrows(IllegalArgumentException.class,
                 () -> teamService.createTeam(req));
     }
 
-
-
-
-    // ========== updateTeam ==========
+    // ---------------------------------------
+    // UPDATE TEAM
+    // ---------------------------------------
 
     @Test
-    void updateTeam_changeNameAndDescription_broadcastAndNotifyMembers() {
-        Long teamId = team.getId();
-        Long actorId = 999L;
-
-        // FIX: tên cũ phải *khác* tên mới để service gọi check trùng tên
-        team.setTeamName("Tên Cũ");
-
+    void updateTeam_happyPath() {
         UpdateTeamRequest req = new UpdateTeamRequest();
-        req.setTeamName("Ban Kỹ thuật mới");
-        req.setDescription("Mô tả mới");
-        req.setLinkGroupChat("https://chat.example.com/new");
+        req.setTeamName("Ban mới");
+        req.setDescription("Desc");
+        req.setLinkGroupChat("link");
 
-        when(teamRepository.findById(teamId)).thenReturn(Optional.of(team));
-        when(guard.getCurrentUserId()).thenReturn(actorId);
-        when(guard.isClubPresident(actorId, club.getId())).thenReturn(true);
+        team.setTeamName("Ban cũ");
 
-        when(teamRepository.existsByClubIdAndTeamNameIgnoreCaseAndIdNot(
-                eq(club.getId()),
-                eq("Ban Kỹ thuật mới"),
-                eq(teamId)
-        )).thenReturn(false);
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
+        when(guard.getCurrentUserId()).thenReturn(999L);
+        when(guard.isClubPresident(999L, 1L)).thenReturn(true);
 
-        RoleMemberShip rm1 = new RoleMemberShip();
-        ClubMemberShip cms1 = new ClubMemberShip();
-        User u1 = new User();
-        u1.setId(100L);
-        cms1.setUser(u1);
-        rm1.setClubMemberShip(cms1);
-        rm1.setIsActive(true);
+        when(teamRepository.existsByClubIdAndTeamNameIgnoreCaseAndIdNot(eq(1L),
+                eq("Ban mới"), eq(100L))).thenReturn(false);
 
-        when(roleMemberShipRepository.findByTeamIdAndIsActiveTrue(teamId))
-                .thenReturn(List.of(rm1));
-
-        Team saved = new Team();
-        saved.setId(teamId);
-        saved.setTeamName("Ban Kỹ thuật mới");
-        saved.setDescription("Mô tả mới");
-        saved.setLinkGroupChat("https://chat.example.com/new");
-        saved.setClub(club);
-
-        when(teamRepository.save(any(Team.class))).thenReturn(saved);
-
-        TeamResponse dto = new TeamResponse();
-        dto.setId(saved.getId());
-        dto.setTeamName(saved.getTeamName());
-        when(teamMapper.toDto(saved)).thenReturn(dto);
-
-        TeamResponse result = teamService.updateTeam(teamId, req);
-
-        assertEquals("Ban Kỹ thuật mới", result.getTeamName());
-    }
-
-
-    @Test
-    void updateTeam_throwsAccessDenied_whenUserNotClubLeaderOrVice() {
-        // Arrange
-        Long teamId = team.getId();
-        when(teamRepository.findById(teamId)).thenReturn(Optional.of(team));
-        when(guard.getCurrentUserId()).thenReturn(123L);
-        when(guard.isClubPresident(anyLong(), eq(club.getId()))).thenReturn(false);
-        when(guard.isClubVice(anyLong(), eq(club.getId()))).thenReturn(false);
-
-        UpdateTeamRequest req = new UpdateTeamRequest();
-        req.setTeamName("Tên mới");
-
-        // Act & Assert
-        assertThrows(AccessDeniedException.class,
-                () -> teamService.updateTeam(teamId, req));
-    }
-
-    @Test
-    void updateTeam_throwsDuplicate_whenNewNameExists() {
-        // Arrange
-        Long teamId = team.getId();
-        when(teamRepository.findById(teamId)).thenReturn(Optional.of(team));
-        when(guard.getCurrentUserId()).thenReturn(1L);
-        when(guard.isClubPresident(1L, club.getId())).thenReturn(true);
-
-        UpdateTeamRequest req = new UpdateTeamRequest();
-        req.setTeamName("Ban Media");
-
-        when(teamRepository.existsByClubIdAndTeamNameIgnoreCaseAndIdNot(
-                eq(club.getId()),
-                anyString(),
-                eq(teamId)
-        )).thenReturn(true);
-
-        // Act & Assert
-        assertThrows(DuplicateResourceException.class,
-                () -> teamService.updateTeam(teamId, req));
-    }
-
-    // ========== deleteTeam ==========
-
-    @Test
-    void deleteTeam_happyPath_deactivatesRolesAndBroadcasts() {
-        // Arrange
-        Long teamId = team.getId();
-        Long actorId = 999L;
-
-        when(teamRepository.findById(teamId)).thenReturn(Optional.of(team));
-        when(guard.getCurrentUserId()).thenReturn(actorId);
-        when(guard.isClubPresident(actorId, club.getId())).thenReturn(true);
-
-        // active roles
+        // active members
         RoleMemberShip rm = new RoleMemberShip();
-        rm.setId(1L);
-        rm.setTeam(team);
-        rm.setIsActive(true);
-        ClubMemberShip cms = new ClubMemberShip();
-        User member = new User();
-        member.setId(200L);
-        cms.setUser(member);
+        ClubMemberShip cms = buildMembership(10L);
         rm.setClubMemberShip(cms);
+        rm.setIsActive(true);
 
-        when(roleMemberShipRepository.findByTeamIdAndIsActiveTrue(teamId))
+        when(roleMemberShipRepository.findByTeamIdAndIsActiveTrue(100L))
                 .thenReturn(List.of(rm));
 
-        // Act
-        teamService.deleteTeam(teamId);
+        Team saved = new Team();
+        saved.setId(100L);
+        saved.setTeamName("Ban mới");
+        saved.setClub(club);
+        when(teamRepository.save(any())).thenReturn(saved);
 
-        // Assert
-        // roleMembership bị set inactive và team = null
-        assertFalse(rm.getIsActive());
-        assertNull(rm.getTeam());
+        TeamResponse dto = new TeamResponse();
+        dto.setId(100L);
+        dto.setTeamName("Ban mới");
+        when(teamMapper.toDto(saved)).thenReturn(dto);
 
-        verify(roleMemberShipRepository, times(1)).saveAll(anyList());
-        verify(teamRepository, times(1)).delete(team);
+        TeamResponse result = teamService.updateTeam(100L, req);
 
-        // broadcast
-        verify(webSocketService, times(1)).broadcastToClub(
-                eq(club.getId()),
-                eq("TEAM"),
-                eq("DELETED"),
-                anyMap()
-        );
-
-        // notification gửi cho member
-        verify(notificationService, times(1)).sendToUsers(
-                anyList(),
-                eq(actorId),
-                anyString(),
-                anyString(),
-                any(),
-                any(),
-                anyString(),
-                eq(club.getId()),
-                isNull(),
-                isNull(),
-                isNull()
-        );
+        assertEquals("Ban mới", result.getTeamName());
+        verify(webSocketService).broadcastToClub(eq(1L), eq("TEAM"), eq("UPDATED"), anyMap());
     }
 
     @Test
-    void deleteTeam_throwsAccessDenied_whenNotManager() {
-        // Arrange
-        Long teamId = team.getId();
-        when(teamRepository.findById(teamId)).thenReturn(Optional.of(team));
+    void updateTeam_reject_noPermission() {
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
         when(guard.getCurrentUserId()).thenReturn(5L);
-        when(guard.isClubPresident(anyLong(), eq(club.getId()))).thenReturn(false);
-        when(guard.isClubVice(anyLong(), eq(club.getId()))).thenReturn(false);
+        when(guard.isClubPresident(5L, 1L)).thenReturn(false);
+        when(guard.isClubVice(5L, 1L)).thenReturn(false);
 
-        // Act & Assert
+        UpdateTeamRequest req = new UpdateTeamRequest();
+        req.setTeamName("ABC");
+
         assertThrows(AccessDeniedException.class,
-                () -> teamService.deleteTeam(teamId));
+                () -> teamService.updateTeam(100L, req));
     }
 
-    // ========== getAvailableMembers ==========
+    @Test
+    void updateTeam_reject_duplicateName() {
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
+        when(guard.getCurrentUserId()).thenReturn(1L);
+        when(guard.isClubPresident(1L, 1L)).thenReturn(true);
+
+        UpdateTeamRequest req = new UpdateTeamRequest();
+        req.setTeamName("Trùng tên");
+
+        when(teamRepository.existsByClubIdAndTeamNameIgnoreCaseAndIdNot(eq(1L),
+                anyString(), eq(100L)))
+                .thenReturn(true);
+
+        assertThrows(AppException.class,
+                () -> teamService.updateTeam(100L, req));
+    }
+
+    // ---------------------------------------
+    // DELETE TEAM
+    // ---------------------------------------
 
     @Test
-    void getAvailableMembers_returnsListOfAvailableDtos() {
-        // Arrange
-        when(semesterRepository.findCurrentSemester())
-                .thenReturn(Optional.of(currentSemester));
+    void deleteTeam_happyPath_noHistory() {
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
+        when(guard.getCurrentUserId()).thenReturn(999L);
+        when(guard.isClubPresident(999L, 1L)).thenReturn(true);
 
-        List<Long> userIds = List.of(10L, 11L);
-        when(roleMemberShipRepository.findAvailableMemberUserIds(club.getId(), currentSemester.getId()))
-                .thenReturn(userIds);
+        when(roleMemberShipRepository.existsByTeamId(100L)).thenReturn(false);
+
+        teamService.deleteTeam(100L);
+
+        verify(teamRepository).delete(team);
+        verify(webSocketService).broadcastToClub(eq(1L), eq("TEAM"), eq("DELETED"), anyMap());
+    }
+
+    @Test
+    void deleteTeam_reject_historyExists() {
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
+        when(guard.getCurrentUserId()).thenReturn(999L);
+        when(guard.isClubPresident(999L, 1L)).thenReturn(true);
+
+        when(roleMemberShipRepository.existsByTeamId(100L))
+                .thenReturn(true);
+
+        assertThrows(AppException.class,
+                () -> teamService.deleteTeam(100L));
+    }
+
+    @Test
+    void deleteTeam_reject_noPermission() {
+        when(teamRepository.findById(100L)).thenReturn(Optional.of(team));
+        when(guard.getCurrentUserId()).thenReturn(5L);
+        when(guard.isClubPresident(5L, 1L)).thenReturn(false);
+        when(guard.isClubVice(5L, 1L)).thenReturn(false);
+
+        assertThrows(AccessDeniedException.class,
+                () -> teamService.deleteTeam(100L));
+    }
+
+    // ---------------------------------------
+    // GET AVAILABLE MEMBERS
+    // ---------------------------------------
+
+    @Test
+    void getAvailableMembers_happyPath() {
+
+        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(semester));
+        when(clubMemberShipRepository.findAllActiveNonLeadersMemberIds(1L))
+                .thenReturn(List.of(10L, 11L));
 
         User u1 = new User();
         u1.setId(10L);
         u1.setFullName("User 1");
-        u1.setEmail("u1@example.com");
-        u1.setAvatarUrl("http://img/u1.png");
+        u1.setEmail("a@b");
+        u1.setAvatarUrl("img1");
 
         User u2 = new User();
         u2.setId(11L);
         u2.setFullName("User 2");
-        u2.setEmail("u2@example.com");
-        u2.setAvatarUrl("http://img/u2.png");
+        u2.setEmail("c@d");
+        u2.setAvatarUrl("img2");
 
-        when(userRepository.findByIdIn(userIds)).thenReturn(List.of(u1, u2));
+        when(userRepository.findByIdIn(List.of(10L, 11L)))
+                .thenReturn(List.of(u1, u2));
 
-        // Act
-        List<AvailableMemberDTO> result = teamService.getAvailableMembers(club.getId());
+        List<AvailableMemberDTO> result = teamService.getAvailableMembers(1L);
 
-        // Assert
-        assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals(u1.getId(), result.get(0).getUserId());
-        assertEquals(u2.getId(), result.get(1).getUserId());
     }
 
     @Test
-    void getAvailableMembers_noIds_returnsEmptyList() {
-        // Arrange
-        when(semesterRepository.findCurrentSemester())
-                .thenReturn(Optional.of(currentSemester));
-        when(roleMemberShipRepository.findAvailableMemberUserIds(club.getId(), currentSemester.getId()))
+    void getAvailableMembers_empty() {
+        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(semester));
+        when(clubMemberShipRepository.findAllActiveNonLeadersMemberIds(1L))
                 .thenReturn(Collections.emptyList());
 
-        // Act
-        List<AvailableMemberDTO> result = teamService.getAvailableMembers(club.getId());
+        List<AvailableMemberDTO> out = teamService.getAvailableMembers(1L);
 
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertTrue(out.isEmpty());
         verify(userRepository, never()).findByIdIn(anyList());
     }
 
-    // ========== helpers ==========
+    // ---------------------------------------
+    // HELPERS
+    // ---------------------------------------
 
-    private ClubMemberShip buildMembership(Long userId) {
+    private ClubMemberShip buildMembership(Long uid) {
         User u = new User();
-        u.setId(userId);
-        u.setFullName("User " + userId);
+        u.setId(uid);
+        u.setFullName("User " + uid);
 
-        ClubMemberShip cms = new ClubMemberShip();
-        cms.setId(userId + 1000);
-        cms.setUser(u);
-        cms.setClub(club);
-        cms.setStatus(ClubMemberShipStatus.ACTIVE);
-        return cms;
+        ClubMemberShip cm = new ClubMemberShip();
+        cm.setId(uid + 1000);
+        cm.setUser(u);
+        cm.setClub(club);
+        cm.setStatus(ClubMemberShipStatus.ACTIVE);
+
+        return cm;
     }
 
-    private ClubRole buildClubRole(String code) {
+    private ClubRole buildRole(String code) {
         ClubRole r = new ClubRole();
         r.setId(new Random().nextLong());
         r.setRoleCode(code);
         r.setRoleName(code);
-        r.setRoleLevel(2);
         return r;
     }
 }
